# dictator

./: .dictate.ci.toml  .dictate.toml  .gitignore  .release-please-manifest.json  AGENTS.md  CODE_OF_SUBMISSION.md  Cargo.toml  DECREES.md  DIALECT.md  FAQ.md  README.md  release-please-config.json  rust-toolchain.toml
.forgejo/workflows/: release.yml
.gitea/workflows/: release.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/dictator/: CHANGELOG.md  Cargo.toml
crates/dictator-core/: CHANGELOG.md  Cargo.toml
crates/dictator-core/src/: config.rs  lib.rs  linter_output.rs
crates/dictator-core/wit/: decree.wit
crates/dictator-decree-abi/: CHANGELOG.md  Cargo.toml
crates/dictator-decree-abi/src/: lib.rs
crates/dictator-frontmatter/: CHANGELOG.md  Cargo.toml
crates/dictator-frontmatter/src/: lib.rs
crates/dictator-golang/: CHANGELOG.md  Cargo.toml
crates/dictator-golang/src/: lib.rs
crates/dictator-kjr/: Cargo.toml
crates/dictator-kjr/src/: compliance.rs  config.rs  enthusiasm.rs  formatting.rs  helpers.rs  lib.rs  meta.rs  productivity.rs  structure.rs
crates/dictator-python/: CHANGELOG.md  Cargo.toml
crates/dictator-python/src/: file_length.rs  imports.rs  indentation.rs  lib.rs
crates/dictator-ruby/: CHANGELOG.md  Cargo.toml
crates/dictator-ruby/src/: lib.rs
crates/dictator-rust/: CHANGELOG.md  Cargo.toml
crates/dictator-rust/src/: lib.rs
crates/dictator-rust/tests/: sandbox_test.rs
crates/dictator-supreme/: CHANGELOG.md  Cargo.toml
crates/dictator-supreme/src/: lib.rs
crates/dictator-typescript/: CHANGELOG.md  Cargo.toml
crates/dictator-typescript/src/: lib.rs
crates/dictator-typescript/tests/: sandbox_test.rs
crates/dictator/src/: census.rs  cli.rs  config.rs  dictate.rs  files.rs  lib.rs  lint.rs  main.rs  occupy.rs  output.rs  regime.rs  watch.rs
crates/dictator/src/mcp/: fixers.rs  handlers.rs  linters.rs  logging.rs  mod.rs  progress.rs  protocol.rs  regime.rs  resources.rs  state.rs  tools.rs  utils.rs
crates/dictator/src/mcp/handlers/: dictator.rs  mod.rs  occupy.rs  stalint.rs  watch.rs
crates/dictator/src/mcp/tools/: call_tool.rs  initialize.rs  list_tools.rs  logging.rs  mod.rs
crates/dictator/templates/: default.dictate.toml
crates/dictator/tests/: occupy_integration_test.rs
sandbox/: EXPECTED_VIOLATIONS.md  test_watch.txt
sandbox/configs/: blog-invalid-yaml.md  blog-missing-final-newline.md  blog-missing-required-field.md  blog-multiple-violations.md  blog-no-frontmatter.md  blog-trailing-whitespace.md  blog-valid-frontmatter.md  blog-wrong-frontmatter-order.md  component-wrong-order.mdx
sandbox/golang/: VIOLATIONS.md  long_file.go  missing_newline.go  mixed_line_endings.go  mixed_tabs_spaces.go  raw_string_help.go  trailing_whitespace.go  wrong_package.go
sandbox/python/: README.md  long_file_mixed_endings.py  mixed_indentation.py  no_final_newline.py  trailing_whitespace.py  wrong_import_order.py
sandbox/ruby/: README.md  mixed_indentation.rb  mixed_line_endings.rb  no_final_newline.rb  too_long_file.rb  trailing_whitespace.rb  visibility_order_wrong.rb  wrong_comment_spacing.rb
sandbox/rust/: 01_trailing_whitespace.rs  02_mixed_tabs_spaces.rs  03_missing_final_newline.rs  04_visibility_order.rs  05_long_file.rs  INDEX.md  README.md  old_edition_cargo.toml
sandbox/rust/old_project/: Cargo.toml
sandbox/typescript/: BadReactComponent.tsx  INDEX.md  InconsistentIndentation.ts  README.md  TESTING_CHECKLIST.md  TooLongFile.ts  UtilityFunctions.ts  VIOLATIONS.md  VIOLATION_EXAMPLES.md  WrongImportOrder.ts
scripts/: install.sh
