[package]
name = "dictator-core"
version = "0.10.0"
description = "Core plugin loading and regime management for Dictator"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/seuros/dictator"
homepage = "https://github.com/seuros/dictator"
documentation = "https://docs.rs/dictator-core"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.10.0", path = "../dictator-decree-abi" }
anyhow = { workspace = true }
camino = { workspace = true }
garde = { version = "0.22", features = ["derive"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
wasmtime = { workspace = true, optional = true, features = ["component-model"] }
wasmtime-wasi = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }

[features]
default = ["wasm-loader"]
wasm-loader = ["wasmtime", "wasmtime-wasi", "libloading"]
