[package]
name = "dictator-decree-abi"
version = "0.9.0"
description = "ABI and trait definitions for Dictator structural linter decree plugins"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/seuros/dictator"
homepage = "https://github.com/seuros/dictator"
documentation = "https://docs.rs/dictator-decree-abi"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
