[package]
name = "dictator-frontmatter"
version = "0.1.0"
description = "Markdown frontmatter decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.1.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.1.0", path = "../dictator-core" }
serde.workspace = true
serde_yaml.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
