[package]
name = "dictator-frontmatter"
version = "0.11.0"
description = "Markdown frontmatter decree for Dictator structural linter"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-frontmatter"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.11.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.11.0", path = "../dictator-core" }
serde.workspace = true
serde_yaml.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
