[package]
name = "dictator-golang"
version = "0.2.0"
description = "Go language decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.1.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.1.0", path = "../dictator-core" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
