[package]
name = "dictator-golang"
version = "0.6.4"
description = "Go language decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-golang"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.6.4", path = "../dictator-decree-abi" }
dictator-core = { version = "0.6.4", path = "../dictator-core" }
dictator-supreme = { version = "0.6.4", path = "../dictator-supreme" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
