[package]
name = "dictator-python"
version = "0.6.1"
description = "Python language decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-python"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.6.1", path = "../dictator-decree-abi" }
dictator-core = { version = "0.6.1", path = "../dictator-core" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
