[package]
name = "dictator-python"
version = "0.12.0"
description = "Python language decree for Dictator structural linter"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-python"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.12.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.12.0", path = "../dictator-core" }
dictator-supreme = { version = "0.12.0", path = "../dictator-supreme" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
