[package]
name = "dictator-ruby"
version = "0.6.4"
description = "Ruby language decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-ruby"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.6.4", path = "../dictator-decree-abi" }
dictator-core = { version = "0.6.4", path = "../dictator-core" }
dictator-supreme = { version = "0.6.4", path = "../dictator-supreme" }
memchr = "2"
