[package]
name = "dictator-rust"
version = "0.6.3"
description = "Rust language decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-rust"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.6.3", path = "../dictator-decree-abi" }
dictator-core = { version = "0.6.3", path = "../dictator-core" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
