[package]
name = "dictator-rust"
version = "0.13.1"
description = "Rust language decree for Dictator structural linter"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-rust"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.13.1", path = "../dictator-decree-abi" }
dictator-core = { version = "0.13.1", path = "../dictator-core" }
dictator-supreme = { version = "0.13.1", path = "../dictator-supreme" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
