[package]
name = "dictator-supreme"
version = "0.3.0"
description = "Supreme decree - universal structural rules for Dictator"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.3.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.3.0", path = "../dictator-core" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
