[package]
name = "dictator-supreme"
version = "0.5.1"
description = "Supreme decree - universal structural rules for Dictator"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-supreme"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.5.1", path = "../dictator-decree-abi" }
dictator-core = { version = "0.5.1", path = "../dictator-core" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
