[package]
name = "dictator-typescript"
version = "0.7.0"
description = "TypeScript/JavaScript decree for Dictator structural linter"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation = "https://docs.rs/dictator-typescript"

[lints]
workspace = true

[dependencies]
dictator-decree-abi = { version = "0.7.0", path = "../dictator-decree-abi" }
dictator-core = { version = "0.7.0", path = "../dictator-core" }
dictator-supreme = { version = "0.7.0", path = "../dictator-supreme" }
memchr = "2"

[lib]
crate-type = ["lib", "cdylib"]
