[package]
name = "dictator"
version = "0.10.1"
description = "Dictator - structural linter framework with native and WASM decree support"
readme = "../../README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/seuros/dictator"
homepage = "https://github.com/seuros/dictator"
documentation = "https://docs.rs/dictator"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
camino = { workspace = true }
dictator-core = { version = "0.10.1", path = "../dictator-core" }
dictator-frontmatter = { version = "0.10.1", path = "../dictator-frontmatter" }
dictator-golang = { version = "0.10.1", path = "../dictator-golang" }
dictator-decree-abi = { version = "0.10.1", path = "../dictator-decree-abi" }
dictator-python = { version = "0.10.1", path = "../dictator-python" }
dictator-ruby = { version = "0.10.1", path = "../dictator-ruby" }
dictator-rust = { version = "0.10.1", path = "../dictator-rust" }
dictator-supreme = { version = "0.10.1", path = "../dictator-supreme" }
dictator-typescript = { version = "0.10.1", path = "../dictator-typescript" }
walkdir = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
notify-types = { workspace = true }
ctrlc = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["wasm-loader"]
wasm-loader = ["dictator-core/wasm-loader"]
